--- a/style.css
+++ b/style.css
@@ -15,8 +15,6 @@ body {
   background-image: url("img/1.png");
   background-size: cover;
   background-repeat: no-repeat;
-  display: flex;
-  justify-content: center;
 }
 
 .btn {
@@ -24,17 +22,29 @@ body {
   border: none;
   font-size: 30px;
   padding: 15px 30px;
-  position: absolute;
+  /* position: absolute; */
   border-radius: 15px;
-  top: 600px;
-  left: 1000px;
+  /* top: 600px;
+  left: 1000px; */
+  display: inline;
+  position: absolute;
 }
 
-.btn:active {
-  border: 3px solid #000;
+.btn_1 {
+  top: 90%;
+  left: 50%;
 }
+
+/* .btn:active {
+  border: 3px solid #000;
+} */
 
 .btn_2 {
-  top: 600px;
-  left: 800px;
+  top: 90%;
+  left: 40%;
+}
+
+.container {
+  width: 100%;
+  height: 75vh;
 }
